# duckdb

./: .gitignore
extension/: extension_config.cmake
extension/opendal/: CMakeLists.txt  extension_config.cmake  opendal_extension.cpp  opendal_scan_function.cpp
extension/opendal/include/: opendal_extension.hpp  opendal_filesystem.hpp  opendal_scan_function.hpp
src/main/extension/: extension_helper.cpp
